--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "description": "Thai alhphabet webapp",
   "main": "dist/index.html",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Hiswe/thailpha"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp dev"
@@ -18,6 +22,8 @@
     "browserify": "^8.1.3",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-define-module": "^0.1.1",
+    "gulp-jsoncombine": "^1.0.2",
     "gulp-load-plugins": "^0.8.0",
     "gulp-plumber": "^0.6.6",
     "gulp-stylus": "^2.0.0",
