--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-jsoncombine": "^1.0.2",
     "gulp-load-plugins": "^0.8.0",
     "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
     "gulp-stylus": "^2.0.0",
     "gulp-util": "^3.0.3",
     "gulp-webserver": "^0.9.0",
