--- a/package.json
+++ b/package.json
@@ -20,18 +20,24 @@
   "devDependencies": {
     "browser-sync": "^2.1.4",
     "browserify": "^8.1.3",
+    "fastclick": "^1.0.6",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-cssmin": "^0.1.6",
     "gulp-define-module": "^0.1.1",
+    "gulp-image-resize": "^0.6.0",
     "gulp-jsoncombine": "^1.0.2",
     "gulp-load-plugins": "^0.8.0",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
+    "gulp-streamify": "0.0.5",
     "gulp-stylus": "^2.0.0",
+    "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
     "gulp-webserver": "^0.9.0",
     "mithril": "^0.1.30",
     "run-sequence": "^1.0.2",
+    "viewport-units-buggyfill": "^0.5.0",
     "vinyl-source-stream": "^1.0.0"
   }
 }
