--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-streamify": "0.0.5",
+    "gulp-strip-debug": "^1.0.2",
     "gulp-stylus": "^2.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
