--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thailpha",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Thai alhphabet webapp",
   "main": "dist/index.html",
   "repository": {
@@ -23,6 +23,7 @@
     "fastclick": "^1.0.6",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-bump": "^0.2.1",
     "gulp-cssmin": "^0.1.6",
     "gulp-define-module": "^0.1.1",
     "gulp-image-resize": "^0.6.0",
