VOWELS — basic support

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp dev"
+    "start": "gulp dev",
+    "build": "gulp build"
   },
   "keywords": [
     "thai",
