--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /node_modules
 .DS_Store
 npm-debug.log
-/dist/*.js
+/dist/thailpha.js
+/dist/lib.js
 /dist/*.css
 /dist/*.png
 /dist/cache.manifest
