--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp dev",
-    "build": "gulp build"
+    "build": "gulp build --prod"
   },
   "keywords": [
     "thai",
@@ -21,13 +21,17 @@
   "devDependencies": {
     "browser-sync": "^2.1.4",
     "browserify": "^8.1.3",
+    "del": "^1.1.1",
     "fastclick": "^1.0.6",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-bump": "^0.2.1",
+    "gulp-concat": "^2.5.2",
     "gulp-define-module": "^0.1.1",
     "gulp-filter": "^2.0.2",
+    "gulp-if": "^1.2.5",
     "gulp-image-resize": "^0.6.0",
+    "gulp-jade": "^1.0.0",
     "gulp-jsoncombine": "^1.0.2",
     "gulp-load-plugins": "^0.8.0",
     "gulp-manifest": "0.0.6",
@@ -39,6 +43,7 @@
     "gulp-stylus": "^2.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
+    "lazypipe": "^0.2.3",
     "merge-stream": "^0.1.7",
     "mithril": "^0.1.30",
     "run-sequence": "^1.0.2",
