--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browser-sync": "^2.1.4",
     "browserify": "^8.1.3",
     "del": "^1.1.1",
+    "dominus": "^3.2.4",
     "fastclick": "^1.0.6",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
@@ -47,6 +48,7 @@
     "merge-stream": "^0.1.7",
     "mithril": "^0.1.30",
     "run-sequence": "^1.0.2",
+    "velocity-animate": "^1.2.2",
     "viewport-units-buggyfill": "^0.5.0",
     "vinyl-source-stream": "^1.0.0",
     "yargs": "^3.3.1"
