LETTER – fix scroll

--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "gulp-stylus": "^2.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
+    "inobounce": "^0.1.1",
     "lazypipe": "^0.2.3",
     "merge-stream": "^0.1.7",
     "mithril": "^0.1.30",
+    "pubsub-js": "^1.5.2",
     "run-sequence": "^1.0.2",
     "velocity-animate": "^1.2.2",
     "viewport-units-buggyfill": "^0.5.0",
