--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thailpha",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Thai alhphabet webapp",
   "author": "Hiswe",
   "main": "dist/index.html",
@@ -30,6 +30,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-define-module": "^0.1.1",
     "gulp-filter": "^2.0.2",
+    "gulp-gzip": "^1.1.0",
     "gulp-if": "^1.2.5",
     "gulp-image-resize": "^0.6.0",
     "gulp-jade": "^1.0.0",
