--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "del": "^1.1.1",
     "dominus": "^3.2.4",
     "fastclick": "^1.0.6",
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-bump": "^0.2.1",
+    "gulp-cheerio": "^0.6.2",
+    "gulp-cheerio-clean-svg": "git+https://github.com/Hiswe/gulp-cheerio-clean-svg",
     "gulp-concat": "^2.5.2",
     "gulp-define-module": "^0.1.1",
     "gulp-filter": "^2.0.2",
@@ -36,13 +38,15 @@
     "gulp-jade": "^1.0.0",
     "gulp-jsoncombine": "^1.0.2",
     "gulp-load-plugins": "^0.8.0",
-    "gulp-manifest": "0.0.6",
+    "gulp-manifest": "^0.1.1",
+    "gulp-minify-css": "^1.2.1",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.4.0",
     "gulp-streamify": "0.0.5",
     "gulp-strip-debug": "^1.0.2",
     "gulp-stylus": "^2.0.0",
+    "gulp-svg-symbols": "^1.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
     "inobounce": "^0.1.1",
