--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "babelify": "^7.2.0",
     "browser-sync": "^2.1.4",
     "browserify": "^8.1.3",
     "del": "^1.1.1",
@@ -57,6 +58,7 @@
     "run-sequence": "^1.0.2",
     "velocity-animate": "^1.2.2",
     "viewport-units-buggyfill": "^0.5.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "yargs": "^3.3.1"
   }
