--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0",
     "browser-sync": "^2.1.4",
     "browserify": "^8.1.3",
