--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp dev",
-    "build": "gulp build --prod"
+    "build": "gulp build --prod",
+    "dev": "gulp dev"
   },
   "keywords": [
     "thai",
@@ -19,47 +19,45 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "babelify": "^7.2.0",
+    "autoprefixer": "^7.1.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "browser-sync": "^2.1.4",
-    "browserify": "^14.4.0",
-    "del": "^1.1.1",
+    "csswring": "^6.0.1",
+    "del": "^3.0.0",
     "fastclick": "^1.0.6",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-bump": "^0.2.1",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-bump": "^2.7.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-cheerio-clean-svg": "git+https://github.com/Hiswe/gulp-cheerio-clean-svg",
-    "gulp-concat": "^2.5.2",
     "gulp-define-module": "^0.1.1",
-    "gulp-filter": "^2.0.2",
     "gulp-gzip": "^1.1.0",
-    "gulp-if": "^1.2.5",
-    "gulp-image-resize": "^0.6.0",
-    "gulp-jade": "^1.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-image-resize": "^0.13.0",
     "gulp-jsoncombine": "^1.0.2",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-manifest": "^0.1.1",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-plumber": "^0.6.6",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-pug": "^3.3.0",
+    "gulp-purge-sourcemaps": "^1.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.4.0",
-    "gulp-streamify": "0.0.5",
-    "gulp-strip-debug": "^1.0.2",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-stylus": "^2.0.0",
-    "gulp-svg-symbols": "^1.0.0",
-    "gulp-uglify": "^1.1.0",
+    "gulp-svg-symbols": "^2.0.2",
     "gulp-util": "^3.0.3",
     "inobounce": "^0.1.1",
-    "lazypipe": "^0.2.3",
-    "merge-stream": "^0.1.7",
+    "lazypipe": "^1.0.1",
+    "merge-stream": "^1.0.1",
     "mithril": "^0.1.30",
     "pubsub-js": "^1.5.2",
     "run-sequence": "^1.0.2",
     "velocity-animate": "^1.2.2",
     "viewport-units-buggyfill": "^0.5.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "yargs": "^3.3.1"
+    "webpack": "^3.6.0",
+    "yargs": "^9.0.1"
   }
 }
