--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "alphabet"
   ],
   "license": "ISC",
+  "dependencies": {
+    "fastclick": "^1.0.6",
+    "inobounce": "^0.1.5",
+    "mithril": "^1.1.3",
+    "pubsub-js": "^1.5.7",
+    "velocity-animate": "^1.5.0",
+    "viewport-units-buggyfill": "^0.6.2"
+  },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
@@ -28,7 +36,6 @@
     "browser-sync": "^2.1.4",
     "csswring": "^6.0.1",
     "del": "^3.0.0",
-    "fastclick": "^1.0.6",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-bump": "^2.7.0",
     "gulp-cheerio": "^0.6.2",
@@ -48,15 +55,8 @@
     "gulp-stylus": "^2.0.0",
     "gulp-svg-symbols": "^2.0.2",
     "gulp-util": "^3.0.3",
-    "inobounce": "^0.1.1",
     "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.1",
-    "mithril": "^0.1.30",
-    "pubsub-js": "^1.5.2",
-    "run-sequence": "^1.0.2",
-    "velocity-animate": "^1.2.2",
-    "viewport-units-buggyfill": "^0.5.0",
-    "vinyl-buffer": "^1.0.0",
     "webpack": "^3.6.0",
     "yargs": "^9.0.1"
   }
