--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thailpha",
-  "version": "0.6.3",
+  "version": "1.0.0",
   "description": "Thai alhphabet webapp",
   "author": "Hiswe",
   "main": "public/index.html",
@@ -18,6 +18,7 @@
     "build": "gulp build --prod",
     "build:dev": "gulp build",
     "dev": "gulp dev",
+    "release": "npm run build && gulp release",
     "serve": "http-server -p 3000 --silent -o",
     "serve:dev": "http-server ./.tmp -p 3000 -o",
     "watch": "gulp build && gulp watch"
@@ -62,6 +63,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-stylus": "^2.0.0",
+    "gulp-surge": "^0.1.0",
     "gulp-svg-symbols": "^2.0.2",
     "gulp-util": "^3.0.3",
     "http-server": "^0.10.0",
