--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thailpha",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Thai alhphabet webapp",
   "author": "Hiswe",
   "main": "public/index.html",
@@ -15,6 +15,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && npm run serve",
+    "bump": "gulp bump",
     "build": "gulp build --prod",
     "build:dev": "gulp build",
     "dev": "gulp dev",
