APP – basic routing

--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "pubsub-js": "^1.5.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "velocity-animate": "^1.5.0",
@@ -50,6 +49,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "browser-sync": "^2.1.4",
+    "connect-history-api-fallback": "^1.3.0",
     "csswring": "^6.0.1",
     "del": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
