--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "velocity-animate": "^1.5.0",
-    "viewport-units-buggyfill": "^0.6.2"
+    "viewport-units-buggyfill": "^0.6.2",
+    "zenscroll": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
