--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "velocity-animate": "^1.5.0",
     "viewport-units-buggyfill": "^0.6.2",
