--- a/package.json
+++ b/package.json
@@ -31,19 +31,12 @@
   "license": "ISC",
   "dependencies": {
     "crio": "^4.0.0",
-    "fastclick": "^1.0.6",
-    "inobounce": "^0.1.5",
-    "mithril": "^0.1.30",
-    "pubsub-js": "^1.5.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.0",
-    "redux": "^3.7.2",
-    "velocity-animate": "^1.5.0",
-    "viewport-units-buggyfill": "^0.6.2",
-    "zenscroll": "^4.0.0"
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
