--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bump": "gulp bump",
     "build": "gulp build --prod",
     "build:dev": "gulp build",
+    "build:js": "gulp js",
     "dev": "gulp dev",
     "release": "npm run build && gulp release",
     "serve": "http-server -p 3000 --silent -o",
@@ -31,8 +32,8 @@
   "license": "ISC",
   "dependencies": {
     "crio": "^4.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "preact": "^8.2.5",
+    "preact-compat": "^3.17.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.0",
@@ -43,6 +44,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
