--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && npm run serve",
     "bump": "gulp bump",
-    "build": "gulp build --prod",
-    "build:dev": "gulp build",
+    "build": "gulp buildProd --prod",
+    "build:prod": "npm run build --prod",
+    "build:dev": "gulp buildDev",
     "build:js": "gulp js",
     "dev": "gulp dev",
     "release": "npm run build && gulp release",
@@ -67,14 +68,17 @@
     "gulp-pug": "^3.3.0",
     "gulp-purge-sourcemaps": "^1.0.0",
     "gulp-rename": "^1.2.0",
+    "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-stylus": "^2.0.0",
     "gulp-surge": "^0.1.0",
     "gulp-svg-symbols": "^2.0.2",
+    "gulp-uglify-es": "^0.1.3",
     "gulp-util": "^3.0.3",
     "http-server": "^0.10.0",
     "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.1",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.6.0",
     "yargs": "^9.0.1"
   }
