--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-strip-debug": "^1.1.0",
     "gulp-stylus": "^2.0.0",
     "gulp-surge": "^0.1.0",
     "gulp-svg-symbols": "^2.0.2",
