--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "thailpha",
   "version": "2.0.1",
-  "description": "Thai alhphabet webapp",
-  "author": "Hiswe",
+  "description": "Thai alphabet webapp",
+  "author": "Yannick Aïvayan <yannick.aivayan@hiswe.net> (http://hiswe.net)",
   "main": "public/index.html",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/Hiswe/thailpha"
-  },
+  "repository": "git://github.com/Hiswe/thailpha",
   "engines": {
     "node": "8.5.0",
     "npm": "5.3.0"
