--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "public/index.html",
   "repository": "git://github.com/Hiswe/thailpha",
   "engines": {
-    "node": "8.5.0",
-    "npm": "5.3.0"
+    "node": "8.9.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -30,7 +29,8 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "crio": "^4.0.0",
+    "babel-preset-env": "^1.6.1",
+    "crio": "^5.0.0",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
     "react-redux": "^5.0.6",
@@ -44,15 +44,14 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "browser-sync": "^2.1.4",
     "connect-history-api-fallback": "^1.3.0",
     "csswring": "^6.0.1",
     "del": "^3.0.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-bump": "^2.7.0",
+    "gulp": "^4.0.0",
+    "gulp-bump": "^3.0.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-cheerio-clean-svg": "git+https://github.com/Hiswe/gulp-cheerio-clean-svg",
     "gulp-define-module": "^0.1.1",
@@ -66,19 +65,19 @@
     "gulp-pug": "^3.3.0",
     "gulp-purge-sourcemaps": "^1.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-size": "^2.1.0",
+    "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.1",
-    "gulp-strip-debug": "^1.1.0",
+    "gulp-strip-debug": "^2.0.0",
     "gulp-stylus": "^2.0.0",
     "gulp-surge": "^0.1.0",
-    "gulp-svg-symbols": "^2.0.2",
+    "gulp-svg-symbols": "^3.0.0",
     "gulp-uglify-es": "^0.1.3",
     "gulp-util": "^3.0.3",
     "http-server": "^0.10.0",
     "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.1",
-    "uglifyjs-webpack-plugin": "^0.4.6",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.6.0",
-    "yargs": "^9.0.1"
+    "yargs": "^10.0.3"
   }
 }
