--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && npm run serve",
+    "doctoc": "doctoc README.md --github",
     "bump": "gulp bump",
     "build": "gulp buildProd --prod",
     "build:prod": "npm run build --prod",
@@ -50,6 +51,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "csswring": "^6.0.1",
     "del": "^3.0.0",
+    "doctoc": "^1.3.0",
     "gulp": "^4.0.0",
     "gulp-bump": "^3.0.0",
     "gulp-cheerio": "^0.6.2",
