--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "ansi-magenta": "^0.1.1",
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -47,11 +48,13 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "beeper": "^1.1.1",
     "browser-sync": "^2.1.4",
     "connect-history-api-fallback": "^1.3.0",
     "csswring": "^6.0.1",
     "del": "^3.0.0",
     "doctoc": "^1.3.0",
+    "fancy-log": "^1.3.2",
     "gulp": "^4.0.0",
     "gulp-bump": "^3.0.0",
     "gulp-cheerio": "^0.6.2",
@@ -73,7 +76,6 @@
     "gulp-stylus": "^2.0.0",
     "gulp-svg-symbols": "^3.0.0",
     "gulp-uglify-es": "^0.1.3",
-    "gulp-util": "^3.0.3",
     "http-server": "^0.10.0",
     "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.1",
