--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "dependencies": {
     "babel-preset-env": "^1.6.1",
     "crio": "^5.0.0",
-    "preact": "^8.2.5",
-    "preact-compat": "^3.17.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.0",
