--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && npm run serve",
     "doctoc": "doctoc README.md --github",
-    "bump": "gulp bump",
     "build": "gulp buildProd --prod",
     "build:prod": "npm run build --prod",
     "build:dev": "gulp buildDev",
@@ -20,7 +19,7 @@
     "deploy": "npm run release",
     "dev": "gulp dev",
     "release": "npm run build && gulp release",
-    "serve": "http-server -p 3000 --silent -o",
+    "serve": "ws --https --port 5000 --directory public  --spa index.html",
     "serve:dev": "http-server ./.tmp -p 3000 -o",
     "watch": "gulp buildProd --prod && gulp watch --prod"
   },
@@ -75,8 +74,8 @@
     "gulp-stylus": "^2.0.0",
     "gulp-svg-symbols": "^3.0.0",
     "gulp-uglify-es": "^1.0.0",
-    "http-server": "^0.11.1",
     "lazypipe": "^1.0.1",
+    "local-web-server": "^2.3.1",
     "merge-stream": "^1.0.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.6.0",
