--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "description": "Thai Alphabet",
   "lang": "en-US",
   "display": "standalone",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "icons": [{
     "src": "touch-icon-icon-iphone.png",
     "sizes": "57x57",
@@ -33,9 +33,5 @@
     "src": "touch-icon-iphone-6-plus.png",
     "sizes": "180x180",
     "type": "image/png"
-  }],
-  "related_applications": [{
-    "platform": "web",
-    "url": "https://thailpha.surge.sh/"
   }]
 }
