--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
+  "manifest_version": 2,
   "name": "Thailpha",
   "short_name": "Thailpha",
-  "start_url": "/?utm_source=homescreen",
   "background_color": "#fff",
   "theme_color": "black",
   "description": "Thai Alphabet",
   "lang": "en-US",
   "display": "standalone",
+  "start_url": "/index.html?utm_source=homescreen",
   "orientation": "any",
   "icons": [{
     "src": "touch-icon-icon-iphone.png",
@@ -32,6 +33,10 @@
   }, {
     "src": "touch-icon-iphone-6-plus.png",
     "sizes": "180x180",
+    "type": "image/png"
+  }, {
+    "src": "launcher-icon-touch-icon-4x.png",
+    "sizes": "192x192",
     "type": "image/png"
   }]
 }
