DEPLOY – begin to write script

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "gulp-cheerio": "^0.6.2",
     "gulp-cheerio-clean-svg": "git+https://github.com/Hiswe/gulp-cheerio-clean-svg",
     "gulp-define-module": "^0.1.1",
+    "gulp-git": "^2.5.1",
     "gulp-gzip": "^1.1.0",
     "gulp-if": "^2.0.2",
     "gulp-image-resize": "^0.13.0",
@@ -75,6 +76,7 @@
     "gulp-sourcemaps": "^2.6.1",
     "gulp-stylus": "^2.0.0",
     "gulp-svg-symbols": "^3.0.0",
+    "inquirer": "^5.0.1",
     "lazypipe": "^1.0.1",
     "local-web-server": "^2.3.1",
     "merge-stream": "^1.0.1",
