--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "manifest_version": 2,
+  "version": "2.0.1",
   "name": "Thailpha",
   "short_name": "Thailpha",
   "background_color": "#fff",
