--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build:prod && npm run serve:prod",
     "doctoc": "doctoc README.md --github",
-    "build:prod": "gulp build:prod --prod",
+    "build:prod": "gulp build:prod --compress",
     "build:dev": "gulp build",
     "build:js": "gulp js",
-    "pre-release": "gulp pre-release",
+    "pre-release": "gulp pre-release --compress --release",
     "dev": "gulp dev",
     "release": "npm run pre-release && node ./bin/release.js",
     "serve:prod": "ws --https --port 5000 --directory dist --spa index.html",
-    "serve:dev": "ws --https --port 5000 --directory .tmp --spa index.html --log.format tiny",
-    "serve:dev-no-https": "ws --port 4000 --directory .tmp --spa index.html --log.format tiny",
-    "watch:prod": "npm run build:prod --prod && gulp watch --prod",
+    "serve:dev": "ws --https --port 5000 --directory dist --spa index.html --log.format tiny",
+    "serve:dev-no-https": "ws --port 4000 --directory dist --spa index.html --log.format tiny",
+    "watch:prod": "npm run build:prod --compress && gulp watch --compress",
     "watch:dev": "npm run build:dev && gulp watch"
   },
   "keywords": [
