--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thailpha",
-  "version": "3.0.6",
+  "version": "3.0.7",
   "description": "Thai alphabet webapp",
   "author": "Yannick Aïvayan <yannick.aivayan@hiswe.net> (http://hiswe.net)",
   "main": "dist/index.html",
@@ -57,6 +57,7 @@
     "del": "^3.0.0",
     "doctoc": "^1.3.0",
     "fancy-log": "^1.3.2",
+    "firebase-tools": "^3.17.4",
     "gulp": "^4.0.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-cheerio-clean-svg": "git+https://github.com/Hiswe/gulp-cheerio-clean-svg",
