APP – fix animation breaking the app (#31)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pre-release": "gulp pre-release --compress --release",
     "dev": "gulp dev",
     "release": "npm run pre-release && node ./bin/release.js",
+    "test-release": "npm run pre-release --no-bump && node ./bin/release.js --test-release",
     "serve:prod": "ws --https --port 5000 --directory dist --spa index.html",
     "serve:dev": "ws --https --port 5000 --directory dist --spa index.html --log.format tiny",
     "serve:dev-no-https": "ws --port 4000 --directory dist --spa index.html --log.format tiny",
@@ -50,7 +51,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "beeper": "^1.1.1",
-    "browser-sync": "^2.23.5",
+    "browser-sync": "^2.23.6",
     "connect-history-api-fallback": "^1.3.0",
     "connect-logger": "^0.0.1",
     "csswring": "^6.0.1",
@@ -62,7 +63,7 @@
     "gulp-cheerio": "^0.6.2",
     "gulp-cheerio-clean-svg": "git+https://github.com/Hiswe/gulp-cheerio-clean-svg",
     "gulp-define-module": "^0.1.1",
-    "gulp-gzip": "^1.1.0",
+    "gulp-gzip": "^1.4.2",
     "gulp-if": "^2.0.2",
     "gulp-image-resize": "^0.13.0",
     "gulp-json-editor": "^2.2.1",
@@ -74,16 +75,16 @@
     "gulp-purge-sourcemaps": "^1.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-stylus": "^2.0.0",
     "gulp-svg-symbols": "^3.0.0",
     "inquirer": "^5.0.1",
     "lazypipe": "^1.0.1",
-    "local-web-server": "^2.3.1",
+    "local-web-server": "^2.4.0",
     "merge-stream": "^1.0.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.6.0",
     "workbox-build": "^2.1.2",
-    "yargs": "^10.1.1"
+    "yargs": "^11.0.0"
   }
 }
