--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build:prod && npm run serve:prod",
+    "dev": "gulp dev",
     "doctoc": "doctoc README.md --github",
     "build:prod": "gulp build:prod --compress",
     "build:dev": "gulp build",
     "build:js": "gulp js",
-    "pre-release": "gulp pre-release --compress --release",
-    "dev": "gulp dev",
-    "release": "npm run pre-release && node ./bin/release.js",
-    "test-release": "npm run pre-release --no-bump && node ./bin/release.js --test-release",
     "serve:prod": "ws --https --port 5000 --directory dist --spa index.html",
     "serve:dev": "ws --https --port 5000 --directory dist --spa index.html --log.format tiny",
     "serve:dev-no-https": "ws --port 4000 --directory dist --spa index.html --log.format tiny",
     "watch:prod": "npm run build:prod --compress && gulp watch --compress",
-    "watch:dev": "npm run build:dev && gulp watch"
+    "watch:dev": "npm run build:dev && gulp watch",
+    "pre-release": "gulp pre-release --compress --release",
+    "deploy": "node ./bin/release.js",
+    "test-release": "npm run pre-release -- --no-bump && node ./bin/release.js --no-bump",
+    "release": "npm run pre-release && npm run deploy",
+    "pre-release:github": "npm run pre-release -- --dest=github",
+    "deploy:github": "npm run deploy -- --dest=github",
+    "test-release:github": "npm run pre-release:github -- --no-bump && npm run deploy:github -- --no-bump"
   },
   "keywords": [
     "thai",
