--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thailpha",
-  "version": "3.0.7",
+  "version": "3.0.9",
   "description": "Thai alphabet webapp",
   "author": "Yannick Aïvayan <yannick.aivayan@hiswe.net> (http://hiswe.net)",
   "main": "dist/index.html",
@@ -23,11 +23,11 @@
     "watch:dev": "npm run build:dev && gulp watch",
     "pre-release": "gulp pre-release --compress --release",
     "deploy": "node ./bin/release.js",
-    "test-release": "npm run pre-release -- --no-bump && node ./bin/release.js --no-bump",
+    "release:no-bump": "npm run pre-release -- --no-bump && node ./bin/release.js --no-bump",
     "release": "npm run pre-release && npm run deploy",
-    "pre-release:github": "npm run pre-release -- --dest=github",
-    "deploy:github": "npm run deploy -- --dest=github",
-    "test-release:github": "npm run pre-release:github -- --no-bump && npm run deploy:github -- --no-bump"
+    "pre-release:firebase": "npm run pre-release -- --dest=firebase",
+    "deploy:firebase": "npm run deploy -- --dest=firebase",
+    "release:no-bump:firebase": "npm run pre-release:firebase -- --no-bump && npm run deploy:firebase -- --no-bump"
   },
   "keywords": [
     "thai",
