--- a/package.json
+++ b/package.json
@@ -35,23 +35,23 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
     "crio": "^5.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.0",
-    "redux": "^3.7.2",
-    "shelljs": "^0.8.1"
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "ansi-magenta": "^0.1.1",
     "autoprefixer": "^7.2.5",
+    "ava": "^0.25.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "beeper": "^1.1.1",
@@ -86,6 +86,7 @@
     "lazypipe": "^1.0.1",
     "local-web-server": "^2.4.0",
     "merge-stream": "^1.0.1",
+    "shelljs": "^0.8.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.6.0",
     "workbox-build": "^2.1.2",
