--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "author": "Yannick Aïvayan <yannick.aivayan@hiswe.net> (http://hiswe.net)",
   "main": "dist/index.html",
   "repository": "git://github.com/Hiswe/thailpha",
+  "keywords": [
+    "thai",
+    "alphabet"
+  ],
   "engines": {
     "node": "8.9.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "gulp data && ava",
     "start": "npm run build:prod && npm run serve:prod",
     "dev": "gulp dev",
     "doctoc": "doctoc README.md --github",
@@ -29,10 +33,19 @@
     "deploy:firebase": "npm run deploy -- --dest=firebase",
     "release:firebase:no-bump": "npm run pre-release:firebase -- --no-bump && npm run deploy:firebase -- --no-bump"
   },
-  "keywords": [
-    "thai",
-    "alphabet"
-  ],
+  "ava": {
+    "files": [
+      "test/*.js"
+    ],
+    "require": [
+      "@babel/register"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "@ava/stage-4"
+    ]
+  },
   "license": "MIT",
   "dependencies": {
     "crio": "^5.0.0",
@@ -44,6 +57,8 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.38",
+    "@babel/register": "^7.0.0-beta.38",
     "ansi-magenta": "^0.1.1",
     "autoprefixer": "^7.2.5",
     "ava": "^0.25.0",
@@ -53,6 +68,7 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "beeper": "^1.1.1",
     "browser-sync": "^2.23.6",
@@ -63,6 +79,7 @@
     "doctoc": "^1.3.0",
     "fancy-log": "^1.3.2",
     "firebase-tools": "^3.17.4",
+    "fs-extra": "^5.0.0",
     "gulp": "^4.0.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-cheerio-clean-svg": "git+https://github.com/Hiswe/gulp-cheerio-clean-svg",
