APP – deploy fixed datas

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thailpha",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Thai alphabet webapp",
   "author": "Yannick Aïvayan <yannick.aivayan@hiswe.net> (http://hiswe.net)",
   "main": "dist/index.html",
@@ -28,7 +28,7 @@
     "pre-release": "gulp pre-release --compress --release",
     "deploy": "node ./bin/release.js",
     "release:no-bump": "npm run pre-release -- --no-bump && node ./bin/release.js --no-bump",
-    "release": "npm run pre-release && npm run deploy",
+    "release": "npm run test && npm run pre-release && npm run deploy",
     "pre-release:firebase": "npm run pre-release -- --dest=firebase",
     "deploy:firebase": "npm run deploy -- --dest=firebase",
     "release:firebase:no-bump": "npm run pre-release:firebase -- --no-bump && npm run deploy:firebase -- --no-bump"
