--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "watch:prod": "npm run build:prod --compress && gulp watch --compress",
     "watch:dev": "npm run build:dev && gulp watch",
     "pre-release": "gulp pre-release --compress --release",
+    "pre-release:no:bump": "gulp pre-release --compress --release --no-bump",
     "deploy": "node ./bin/release.js",
-    "release:no-bump": "npm run pre-release -- --no-bump && node ./bin/release.js --no-bump",
+    "release:no-bump": "npm run pre-release:no-bump && node ./bin/release.js --no-bump",
     "release": "npm run test && npm run pre-release && npm run deploy",
     "pre-release:gh": "npm run pre-release -- --dest=gh",
+    "pre-release:gh:no-bump": "npm run pre-release:no-bump -- --dest=gh",
     "deploy:gh": "npm run deploy -- --dest=gh",
-    "release:gh:no-bump": "npm run pre-release:gh -- --no-bump && npm run deploy:gh -- --no-bump"
+    "release:gh:no-bump": "npm run pre-release:gh:no-bump && npm run deploy:gh -- --no-bump"
   },
   "ava": {
     "files": [
