--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build:prod": "yarn run build",
     "build:dev": "gulp build",
     "build:js": "gulp js",
+    "build:js:workbox": "gulp js:workbox",
     "serve:prod": "ws --https --port 5000 --directory dist --spa index.html",
     "serve:dev": "ws --https --port 5000 --directory dist --spa index.html --log.format tiny",
     "serve:dev-no-https": "ws --port 4000 --directory dist --spa index.html --log.format tiny",
@@ -40,13 +41,10 @@
     "files": [
       "test/*.js"
     ],
+    "babel": false,
+    "compileEnhancements": false,
     "require": [
       "@babel/register"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "@ava/stage-4"
     ]
   },
   "license": "MIT",
@@ -60,19 +58,17 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/register": "^7.0.0-beta.38",
+    "@babel/core": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.42",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.42",
+    "@babel/preset-env": "^7.0.0-beta.42",
+    "@babel/preset-react": "^7.0.0-beta.42",
+    "@babel/register": "^7.0.0-beta.42",
+    "@babel/runtime": "^7.0.0-beta.42",
     "ansi-magenta": "^0.1.1",
-    "autoprefixer": "^7.2.5",
-    "ava": "^0.25.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
+    "autoprefixer": "^8.2.0",
+    "ava": "^1.0.0-beta.3",
+    "babel-loader": "^8.0.0-beta.2",
     "beeper": "^1.1.1",
     "browser-sync": "^2.23.6",
     "connect-history-api-fallback": "^1.3.0",
@@ -108,8 +104,8 @@
     "merge-stream": "^1.0.1",
     "shelljs": "^0.8.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^3.6.0",
-    "workbox-build": "^2.1.2",
+    "webpack": "^4.2.0",
+    "workbox-build": "^3.0.1",
     "yargs": "^11.0.0"
   }
 }
