--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "crio": "^5.0.0",
     "react": "^16.2.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -103,7 +104,6 @@
     "local-web-server": "^2.4.0",
     "merge-stream": "^1.0.1",
     "shelljs": "^0.8.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^4.2.0",
     "workbox-build": "^3.0.1",
     "yargs": "^11.0.0"
