--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "alphabet"
   ],
   "engines": {
-    "node": "8.10.0"
+    "node": "8.11.2"
   },
   "scripts": {
     "test": "gulp data && ava",
@@ -49,37 +49,37 @@
   },
   "license": "MIT",
   "dependencies": {
-    "crio": "^5.0.0",
-    "react": "^16.2.0",
+    "crio": "^5.0.1",
+    "react": "^16.4.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-transition-group": "^2.2.0",
-    "redux": "^3.7.2"
+    "react-transition-group": "^2.3.1",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.42",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "@babel/preset-react": "^7.0.0-beta.42",
-    "@babel/register": "^7.0.0-beta.42",
-    "@babel/runtime": "^7.0.0-beta.42",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.49",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/preset-react": "^7.0.0-beta.49",
+    "@babel/register": "^7.0.0-beta.49",
+    "@babel/runtime": "^7.0.0-beta.49",
     "ansi-magenta": "^0.1.1",
-    "autoprefixer": "^8.2.0",
+    "autoprefixer": "^8.6.0",
     "ava": "^1.0.0-beta.3",
-    "babel-loader": "^8.0.0-beta.2",
+    "babel-loader": "^8.0.0-beta",
     "beeper": "^1.1.1",
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.24.4",
     "connect-history-api-fallback": "^1.3.0",
     "connect-logger": "^0.0.1",
     "csswring": "^6.0.1",
     "del": "^3.0.0",
     "doctoc": "^1.3.0",
     "fancy-log": "^1.3.2",
-    "firebase-tools": "^3.17.4",
-    "fs-extra": "^5.0.0",
+    "firebase-tools": "^3.18.6",
+    "fs-extra": "^6.0.1",
     "gulp": "^4.0.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-cheerio-clean-svg": "git+https://github.com/Hiswe/gulp-cheerio-clean-svg",
@@ -87,25 +87,25 @@
     "gulp-gzip": "^1.4.2",
     "gulp-if": "^2.0.2",
     "gulp-image-resize": "^0.13.0",
-    "gulp-json-editor": "^2.2.1",
+    "gulp-json-editor": "^2.4.1",
     "gulp-jsoncombine": "^1.0.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.0",
-    "gulp-pug": "^3.3.0",
+    "gulp-pug": "^4.0.1",
     "gulp-purge-sourcemaps": "^1.0.0",
-    "gulp-rename": "^1.2.0",
+    "gulp-rename": "^1.2.3",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-stylus": "^2.0.0",
-    "gulp-svg-symbols": "^3.0.0",
-    "inquirer": "^5.0.1",
+    "gulp-svg-symbols": "^3.1.1",
+    "inquirer": "^6.0.0",
     "lazypipe": "^1.0.1",
-    "local-web-server": "^2.4.0",
+    "local-web-server": "^2.5.2",
     "merge-stream": "^1.0.1",
-    "shelljs": "^0.8.1",
-    "webpack": "^4.2.0",
-    "workbox-build": "^3.0.1",
+    "shelljs": "^0.8.2",
+    "webpack": "^4.11.1",
+    "workbox-build": "^3.2.0",
     "yargs": "^11.0.0"
   }
 }
