--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "gulp data && ava",
     "start": "npm run build:prod && npm run serve:prod",
     "dev": "gulp dev",
-    "toc": "doctoc README.md --github",
+    "toc": "doctoc README.md README_DEV.md --github",
     "build": "gulp build:prod --compress",
     "build:prod": "yarn run build",
     "build:dev": "gulp build",
@@ -24,15 +24,15 @@
     "serve:dev-no-https": "ws --port 4000 --directory dist --spa index.html --log.format tiny",
     "watch:prod": "npm run build:prod --compress && gulp watch --compress",
     "watch:dev": "npm run build:dev && gulp watch",
+    "release": "npm run test && npm run pre-release && npm run deploy",
+    "release:no-bump": "npm run pre-release:no-bump && node ./bin/release.js --no-bump",
+    "release:gh:no-bump": "npm run pre-release:gh:no-bump && npm run deploy:gh -- --no-bump",
     "pre-release": "gulp pre-release --compress --release",
     "pre-release:no-bump": "gulp pre-release --compress --release --no-bump",
-    "deploy": "node ./bin/release.js",
-    "release:no-bump": "npm run pre-release:no-bump && node ./bin/release.js --no-bump",
-    "release": "npm run test && npm run pre-release && npm run deploy",
     "pre-release:gh": "npm run pre-release -- --dest=gh",
     "pre-release:gh:no-bump": "npm run pre-release:no-bump -- --dest=gh",
-    "deploy:gh": "npm run deploy -- --dest=gh",
-    "release:gh:no-bump": "npm run pre-release:gh:no-bump && npm run deploy:gh -- --no-bump"
+    "deploy": "node ./bin/release.js",
+    "deploy:gh": "npm run deploy -- --dest=gh"
   },
   "ava": {
     "files": ["test/*.js"],
