--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,7 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
-    "@babel/transform-runtime",
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-object-rest-spread"
   ]
 }
