NODE – update version

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "alphabet"
   ],
   "engines": {
-    "node": "8.11.4"
+    "node": ">=10.15.0",
+    "npm": ">=6.4.1"
   },
   "scripts": {
     "test": "gulp data && ava",
