--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "dev": "gulp dev",
     "toc": "doctoc README.md README_DEV.md --github",
     "build": "gulp build:prod --compress",
-    "build:prod": "yarn run build",
     "build:dev": "gulp build",
     "build:js": "gulp js",
     "build:js:workbox": "gulp js:workbox",
-    "serve:prod": "yarn run build:prod && ws --https --port 5000 --directory dist --spa index.html",
+    "build:prod": "npm run build",
+    "build:touch-icons": "gulp touch-icons",
+    "serve:prod": "npm run build:prod && ws --https --port 5000 --directory dist --spa index.html",
     "serve:dev": "ws --https --port 5000 --directory dist --spa index.html --log.format tiny",
     "serve:dev-no-https": "ws --port 4000 --directory dist --spa index.html --log.format tiny",
     "watch:prod": "npm run build:prod --compress && gulp watch --compress",
@@ -87,7 +88,6 @@
     "gulp-define-module": "^0.1.1",
     "gulp-gzip": "^1.4.2",
     "gulp-if": "^2.0.2",
-    "gulp-image-resize": "^0.13.0",
     "gulp-json-editor": "^2.4.2",
     "gulp-jsoncombine": "^1.0.2",
     "gulp-load-plugins": "^1.5.0",
@@ -106,6 +106,7 @@
     "merge-stream": "^1.0.1",
     "shelljs": "^0.8.2",
     "webpack": "^4.17.0",
+    "webpack-pwa-manifest": "^4.0.0",
     "workbox-build": "^3.4.1",
     "yargs": "^12.0.1"
   }
