--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dev": "gulp dev",
     "toc": "doctoc README.md README_DEV.md --github",
     "build": "gulp build:prod --compress",
+    "build:assets": "gulp assets",
+    "build:css": "gulp css",
     "build:dev": "gulp build",
     "build:js": "gulp js",
     "build:js:workbox": "gulp js:workbox",
@@ -96,14 +98,15 @@
     "gulp-pug": "^4.0.1",
     "gulp-purge-sourcemaps": "^1.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-stylus": "^2.0.0",
     "gulp-svg-symbols": "^3.2.0",
     "inquirer": "^6.1.0",
     "lazypipe": "^1.0.1",
     "local-web-server": "^2.6.0",
     "merge-stream": "^1.0.1",
+    "node-sass": "^4.11.0",
     "shelljs": "^0.8.2",
     "webpack": "^4.17.0",
     "webpack-pwa-manifest": "^4.0.0",
