--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "browser-sync": "^2.24.6",
     "connect-history-api-fallback": "^1.3.0",
     "connect-logger": "^0.0.1",
+    "css-loader": "^2.1.0",
     "csswring": "^7.0.0",
     "del": "^3.0.0",
     "doctoc": "^1.3.0",
@@ -98,16 +99,18 @@
     "gulp-pug": "^4.0.1",
     "gulp-purge-sourcemaps": "^1.0.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-symbols": "^3.2.0",
     "inquirer": "^6.1.0",
-    "lazypipe": "^1.0.1",
     "local-web-server": "^2.6.0",
     "merge-stream": "^1.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
+    "style-loader": "^0.23.1",
     "webpack": "^4.17.0",
     "webpack-pwa-manifest": "^4.0.0",
     "workbox-build": "^3.4.1",
