--- a/package.json
+++ b/package.json
@@ -95,19 +95,18 @@
     "gulp-jsoncombine": "^1.0.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-pug": "^4.0.1",
-    "gulp-purge-sourcemaps": "^1.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-symbols": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "inquirer": "^6.1.0",
     "local-web-server": "^2.6.0",
     "merge-stream": "^1.0.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
+    "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
     "style-loader": "^0.23.1",
