DEV – change dev server

--- a/package.json
+++ b/package.json
@@ -70,14 +70,12 @@
     "@babel/preset-react": "^7.0.0-rc.2",
     "@babel/register": "^7.0.0-rc.2",
     "@babel/runtime": "^7.0.0-rc.2",
+    "acorn": "^6.0.6",
     "ansi-magenta": "^0.1.1",
     "autoprefixer": "^9.1.2",
     "ava": "^1.2.0",
     "babel-loader": "^8.0.0-beta",
     "beeper": "^1.1.1",
-    "browser-sync": "^2.24.6",
-    "connect-history-api-fallback": "^1.3.0",
-    "connect-logger": "^0.0.1",
     "css-loader": "^2.1.0",
     "csswring": "^7.0.0",
     "del": "^3.0.0",
@@ -97,7 +95,6 @@
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.4.0",
     "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-symbols": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "inquirer": "^6.1.0",
@@ -106,11 +103,13 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
+    "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.17.0",
+    "webpack-dev-server": "^3.1.14",
     "webpack-pwa-manifest": "^4.0.0",
     "workbox-build": "^3.4.1",
     "yargs": "^12.0.1"
