--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "webpack": "^4.17.0",
     "webpack-dev-server": "^3.1.14",
     "webpack-pwa-manifest": "^4.0.0",
-    "workbox-build": "^3.4.1",
+    "workbox-webpack-plugin": "^3.6.3",
     "yargs": "^12.0.1"
   }
 }
