SHARE – move to webshare API (close #51)

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "thailpha",
   "version": "3.2.3",
   "description": "Thai alphabet webapp",
+  "homepage": "https://thailpha-3e7f6.firebaseapp.com/",
   "author": "Yannick Aïvayan <yannick.aivayan@hiswe.net> (http://hiswe.net)",
   "main": "dist/index.html",
   "repository": "git://github.com/Hiswe/thailpha",
@@ -23,9 +24,7 @@
     "build:css": "gulp css",
     "build:dev": "gulp build",
     "build:js": "gulp js",
-    "build:js:workbox": "gulp js:workbox",
     "build:prod": "npm run build",
-    "build:touch-icons": "gulp touch-icons",
     "serve:prod": "npm run build:prod && ws --https --port 5000 --directory dist --spa index.html",
     "serve:dev": "ws --https --port 5000 --directory dist --spa index.html --log.format tiny",
     "serve:dev-no-https": "ws --port 4000 --directory dist --spa index.html --log.format tiny",
@@ -55,7 +54,6 @@
   "dependencies": {
     "crio": "^5.0.2",
     "react": "^16.4.2",
-    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
@@ -76,6 +74,7 @@
     "ava": "^1.2.0",
     "babel-loader": "^8.0.0-beta",
     "beeper": "^1.1.1",
+    "copy-to-clipboard": "^3.0.8",
     "css-loader": "^2.1.0",
     "csswring": "^7.0.0",
     "del": "^3.0.0",
@@ -105,6 +104,7 @@
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
+    "react-toastify": "^4.5.2",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
     "style-loader": "^0.23.1",
