--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "classnames": "^2.2.6",
     "crio": "^5.0.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
