--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.6",
+    "copy-to-clipboard": "^3.0.8",
     "crio": "^5.0.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-pose": "^4.0.6",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-transition-group": "^2.4.0",
+    "react-toastify": "^4.5.2",
     "redux": "^4.0.0"
   },
   "devDependencies": {
@@ -72,7 +74,6 @@
     "ava": "^1.2.0",
     "babel-loader": "^8.0.0-beta",
     "beeper": "^1.1.1",
-    "copy-to-clipboard": "^3.0.8",
     "css-loader": "^2.1.0",
     "csswring": "^7.0.0",
     "del": "^3.0.0",
@@ -102,12 +103,11 @@
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
-    "react-pose": "^4.0.6",
-    "react-toastify": "^4.5.2",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.17.0",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-dev-server": "^3.1.14",
     "webpack-pwa-manifest": "^4.0.0",
     "workbox-webpack-plugin": "^3.6.3",
