--- a/package.json
+++ b/package.json
@@ -51,14 +51,12 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
-    "crio": "^5.0.2",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-pose": "^4.0.6",
-    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-toastify": "^4.5.2",
-    "redux": "^4.0.0"
+    "react-toastify": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-rc.2",
